tests/errors/semantics/too_many_elements_in_array.odl
main :: () -> void  {
    x := [2]int.{1, 2, 3, 4, 5, 6, 7};
};